--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 </div>
 <div id="reviews">
 	<div class="review">
-		<p id="name">Luke Skywalker</p>
+		<p id="name">Mats</p>
 		<p id="content">I liked this shirt a lot it is very green and very cool and all my friends recognize me as a jedi</p>
 	</div>
 	<div class="review">
-		<p id="name">Darth Vader</p>
+		<p id="name">Ishen</p>
 		<p id="content">This shirt is terrible i hate it a lot and its awful</p>
 	</div>
 	<div class="review">
-		<p id="name">C3PO</p>
+		<p id="name">young nut</p>
 		<p id="content">this shirt is so good i love to wear it and to see it in action its great and not terrible at all</p>
 	</div>
 	<div class="review">
-		<p id="name">Jar Jar Binks</p>
+		<p id="name">poog</p>
 		<p id="content">this shirt is good. its green and black and its very comfortable</p>
 	</div>
 	  <div class="review">
-		<p id="name">R2D2</p>
+		<p id="name">Yousef</p>
 		<p id="content">i think this shirt is okay but the sizing isnt great for robots. I don't like that it isnt size inclusive but i like the shirt</p>
 	</div>
 </div>
